11 failed